--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,7 @@ button.accept {
   padding: 10px;
   font-size: 16px;
   color: white;
+  cursor: pointer;
   box-shadow: 0px 6px 18px -5px rgba(237, 103, 85, 1);
 }
 button.logout {
@@ -68,7 +69,7 @@ div.grid_scraper{
 div.scraper{
   margin: 2em;
   margin-left: 10%;
-  padding: 1.5rem;
+  padding: 2rem;
   margin-right: 10%;
   border-radius: 3em;
   box-shadow: 5px 4px 5px 2px #000;
@@ -81,4 +82,7 @@ div.scraper{
 }
 h2 {
   font-size: 1.2em;
+}
+h3 {
+  font-size: 0.7em;
 }
